# Broc

./: BUILDING_FROM_SOURCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LEGAL_DETAILS  LICENSE  README.md  broc-for-elm-programmers.md  default.nix  flake.nix  steal.sh
crates/ast/: Cargo.toml
crates/ast/src/: ast_error.rs  builtin_aliases.rs  constrain.rs  lib.rs  module.rs  solve_type.rs
crates/ast/src/canonicalization/: canonicalize.rs  module.rs
crates/ast/src/lang/: env.rs  rigids.rs  scope.rs
crates/ast/src/lang/core/: declaration.rs  fun_def.rs  pattern.rs  str.rs  types.rs  val_def.rs
crates/ast/src/lang/core/def/: def.rs  (+2 more)
crates/ast/src/mem_pool/: shallow_clone.rs
crates/ast/src/parse/: parse_ast.rs  parse_header.rs
crates/cli/: Cargo.toml
crates/cli/src/: format.rs  lib.rs  main.rs
crates/cli/tests/: cli_run.rs  editor.rs
crates/cli/tests/fixtures/format/: Formatted.broc  NotABrocFile.txt  NotFormatted.broc
crates/cli/tests/fixtures/multi-dep-str/: Main.broc
crates/cli/tests/fixtures/multi-dep-thunk/: Main.broc
crates/cli/tests/known_bad/: Symbol.broc  TypeError.broc
crates/cli_utils/: Cargo.toml
crates/cli_utils/src/: bench_utils.rs  helpers.rs
crates/code_markup/: Cargo.toml
crates/code_markup/src/: lib.rs  markup_error.rs
crates/code_markup/src/markup/: mark_id_ast_id_map.rs  nodes.rs  top_level_def.rs
crates/code_markup/src/markup/convert/: from_ast.rs  from_def2.rs  from_expr2.rs  from_header.rs
crates/compiler/alias_analysis/: Cargo.toml
crates/compiler/alias_analysis/src/: lib.rs
crates/compiler/builtins/: Cargo.toml  README.md
crates/compiler/builtins/bitcode/: Cargo.toml  README.md  build.rs  run-wasm-tests.sh
crates/compiler/builtins/bitcode/bc/: Cargo.toml  build.rs
crates/compiler/builtins/bitcode/benchmark/: dec.zig
crates/compiler/builtins/bitcode/src/: dec.zig  expect.zig  hash.zig  list.zig  main.zig  num.zig  panic.zig  str.zig  utils.zig
crates/compiler/builtins/broc/: Bool.broc  Dict.broc  Json.broc  List.broc  Num.broc  Result.broc  Str.broc
crates/compiler/builtins/src/: bitcode.rs  broc.rs  lib.rs
crates/compiler/can/: Cargo.toml
crates/compiler/can/src/: abilities.rs  annotation.rs  builtins.rs  constraint.rs  copy.rs  def.rs  derive.rs  effect_module.rs  env.rs  exhaustive.rs  expected.rs  expr.rs  lib.rs  module.rs  num.rs  operator.rs  pattern.rs  procedure.rs  scope.rs  string.rs  traverse.rs
crates/compiler/can/src/debug/: pretty_print.rs
crates/compiler/can/tests/: test_can.rs
crates/compiler/can/tests/helpers/: mod.rs
crates/compiler/constrain/: Cargo.toml
crates/compiler/constrain/src/: builtins.rs  expr.rs  lib.rs  module.rs  pattern.rs
crates/compiler/derive/: Cargo.toml
crates/compiler/derive/src/: decoding.rs  encoding.rs  hash.rs  lib.rs  util.rs
crates/compiler/derive/src/decoding/: list.rs  record.rs  tuple.rs
crates/compiler/derive_key/: Cargo.toml
crates/compiler/derive_key/src/: decoding.rs  encoding.rs  hash.rs  lib.rs  util.rs
crates/compiler/exhaustive/: Cargo.toml
crates/compiler/exhaustive/src/: lib.rs
crates/compiler/fmt/: Cargo.toml
crates/compiler/fmt/src/: annotation.rs  collection.rs  def.rs  expr.rs  lib.rs  module.rs  pattern.rs  spaces.rs
crates/compiler/gen_dev/: Cargo.toml  README.md
crates/compiler/gen_dev/src/: lib.rs  object_builder.rs  run_broc.rs
crates/compiler/gen_dev/src/generic64/: aarch64.rs  mod.rs  storage.rs  x86_64.rs
crates/compiler/gen_llvm/: Cargo.toml
crates/compiler/gen_llvm/src/: lib.rs  run_broc.rs
crates/compiler/gen_llvm/src/llvm/: bitcode.rs  build.rs  build_list.rs  build_str.rs  compare.rs  convert.rs  expect.rs  externs.rs  intrinsics.rs  lowlevel.rs  refcounting.rs
crates/compiler/gen_wasm/: Cargo.toml  README.md
crates/compiler/gen_wasm/src/: backend.rs  code_builder.rs  layout.rs  lib.rs  low_level.rs  storage.rs  wasm32_result.rs  wasm32_sized.rs
crates/compiler/late_solve/: Cargo.toml
crates/compiler/late_solve/src/: lib.rs  storage.rs
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs
crates/docs/src/static/: index.html
crates/editor/: Cargo.toml  README.md  snippet-ideas.md
crates/editor/src/: lib.rs
crates/editor/src/editor/: ed_error.rs  grid_node_map.rs  main.rs  render_ast.rs  render_debug.rs  theme.rs
crates/glue/: Cargo.toml
crates/glue/platform/: Shape.broc  Types.broc
crates/glue/src/: RustGlue.broc  enums.rs  glue.rs  lib.rs  load.rs  rust_glue.rs  structs.rs  types.rs
crates/glue/src/broc_type/: mod.rs
crates/glue/templates/: header.rs
crates/glue/tests/: gen_rs.rs  test_glue_cli.rs
crates/glue/tests/fixtures/: .gitignore
crates/glue/tests/helpers/: mod.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/linker/: Cargo.toml  README.md  dynhost_benchmarks_elf64
crates/linker/src/: elf.rs  lib.rs  macho.rs  metadata.rs  pe.rs
crates/linker/src/generate_dylib/: macho.rs
crates/repl_cli/: Cargo.toml
crates/repl_cli/src/: cli_gen.rs  lib.rs  repl_state.rs
crates/repl_eval/: Cargo.toml
crates/repl_eval/src/: eval.rs  gen.rs  lib.rs
crates/repl_expect/: Cargo.toml
crates/repl_expect/src/: app.rs  lib.rs  run.rs
crates/repl_test/: Cargo.toml  test_wasm.sh
crates/repl_test/src/: cli.rs  state.rs  tests.rs  wasm.rs
crates/repl_wasm/: Cargo.toml  README.md  build-www.sh  build.rs
crates/repl_wasm/src/: externs_js.rs  lib.rs  repl.rs  repl_platform.c
crates/reporting/: Cargo.toml
crates/reporting/src/: cli.rs  lib.rs  report.rs
crates/reporting/src/error/: canonicalize.rs  expect.rs  parse.rs  type.rs
crates/reporting/tests/: test_reporting.rs
crates/reporting/tests/helpers/: mod.rs
crates/valgrind/: Cargo.toml
crates/valgrind/src/: lib.rs
crates/wasm_interp/: Cargo.toml
crates/wasm_interp/src/: frame.rs  instance.rs  lib.rs  main.rs  value_store.rs  wasi.rs
crates/wasm_interp/src/tests/: mod.rs  test_basics.rs  test_convert.rs  test_f32.rs  test_f64.rs  test_i32.rs  test_i64.rs  test_mem.rs
crates/wasm_module/: Cargo.toml
crates/wasm_module/src/: lib.rs  sections.rs
(+384 files in other folders)
