[package]
name = "broc_ast"
description = "AST as used by the editor and (soon) docs. In contrast to the compiler, these types do not keep track of a location in a file."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_builtins = { path = "../compiler/builtins" }
broc_can = { path = "../compiler/can" }
broc_collections = { path = "../compiler/collections" }
broc_error_macros = { path = "../error_macros" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_problem = { path = "../compiler/problem" }
broc_region = { path = "../compiler/region" }
broc_reporting = { path = "../reporting" }
broc_solve = { path = "../compiler/solve" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }
broc_unify = { path = "../compiler/unify" }

ven_graph = { path = "../vendor/pathfinding" }

arrayvec.workspace = true
bumpalo.workspace = true
libc.workspace = true
page_size.workspace = true
snafu.workspace = true

[dev-dependencies]
indoc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
