[package]
name = "cli_utils"
description = "Provides shared code for cli tests and benchmarks."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../compiler/collections" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_reporting = { path = "../reporting" }
broc_command_utils = { path = "../utils/command" }

bumpalo.workspace = true
criterion.workspace = true
serde-xml-rs.workspace = true
serde.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
rlimit.workspace = true
