[package]
name = "broc_code_markup"
description = "Our own markup language for Broc code. Used by the editor and the docs."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_ast = { path = "../ast" }
broc_module = { path = "../compiler/module" }
broc_error_utils = { path = "../utils/error" }

palette.workspace = true

bumpalo.workspace = true
serde.workspace = true
snafu.workspace = true
