[package]
name = "broc_docs"
description = "Generates html documentation from Broc files and is used for Brocs builtins."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_ast = { path = "../ast" }
broc_builtins = { path = "../compiler/builtins" }
broc_can = { path = "../compiler/can" }
broc_code_markup = { path = "../code_markup" }
broc_collections = { path = "../compiler/collections" }
broc_highlight = { path = "../highlight" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_region = { path = "../compiler/region" }
broc_reporting = { path = "../reporting" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }

bumpalo.workspace = true
peg.workspace = true
pulldown-cmark.workspace = true
snafu.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
