[package]
name = "broc_editor"
description = "An editor for Broc"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.cargo-udeps.ignore]
# confy is currently unused but should not be removed
normal = ["confy"]
#development = []
#build = []

[features]
default = []

[dependencies]
broc_ast = { path = "../ast" }
broc_builtins = { path = "../compiler/builtins" }
broc_can = { path = "../compiler/can" }
broc_code_markup = { path = "../code_markup" }
broc_collections = { path = "../compiler/collections" }
broc_command_utils = { path = "../utils/command" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_problem = { path = "../compiler/problem" }
broc_region = { path = "../compiler/region" }
broc_reporting = { path = "../reporting" }
broc_solve = { path = "../compiler/solve" }
broc_types = { path = "../compiler/types" }
broc_unify = { path = "../compiler/unify" }
ven_graph = { path = "../vendor/pathfinding" }

arrayvec.workspace = true
bumpalo.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
colored.workspace = true
confy.workspace = true
copypasta.workspace = true
fs_extra.workspace = true
futures.workspace = true
glyph_brush.workspace = true
libc.workspace = true
log.workspace = true
nonempty.workspace = true
page_size.workspace = true
palette.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
snafu.workspace = true
threadpool.workspace = true
wgpu.workspace = true
wgpu_glyph.workspace = true
winit.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
uuid.workspace = true
