[package]
name = "broc_highlight"
description = "For syntax highlighting, starts with a string and returns our markup nodes."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
html-escape = "0.2"
broc_parse = { path = "../compiler/parse" }
broc_region = { path = "../compiler/region" }

