[package]
name = "broc_linker"
description = "A surgical linker for Broc"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "broc_linker"
path = "src/lib.rs"

[dependencies]
broc_collections = { path = "../compiler/collections" }
broc_error_macros = { path = "../error_macros" }
broc_module = { path = "../compiler/module" }
broc_load = { path = "../compiler/load" }
broc_mono = { path = "../compiler/mono" }
broc_packaging = { path = "../packaging" }
broc_reporting = { path = "../reporting" }
broc_target = { path = "../compiler/broc_target" }

bincode.workspace = true
bumpalo.workspace = true
iced-x86.workspace = true
mach_object.workspace = true
memmap2.workspace = true
object.workspace = true
serde.workspace = true
target-lexicon.workspace = true
tempfile.workspace = true


[dev-dependencies]
indoc.workspace = true
libc.workspace = true
serial_test.workspace = true
