[package]
name = "broc_repl_cli"
description = "Command Line Interface(CLI) functionality for the Read-Evaluate-Print-Loop (REPL)."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
# pipe target to broc_build
target-aarch64 = ["broc_build/target-aarch64"]
target-arm = ["broc_build/target-arm"]
target-wasm32 = ["broc_build/target-wasm32"]
target-x86 = ["broc_build/target-x86"]
target-x86_64 = ["broc_build/target-x86_64"]

[dependencies]
broc_build = { path = "../compiler/build" }
broc_builtins = { path = "../compiler/builtins" }
broc_collections = { path = "../compiler/collections" }
broc_gen_llvm = { path = "../compiler/gen_llvm" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_mono = { path = "../compiler/mono" }
broc_parse = { path = "../compiler/parse" }
broc_region = { path = "../compiler/region" }
broc_repl_eval = { path = "../repl_eval" }
broc_reporting = { path = "../reporting" }
broc_std = { path = "../broc_std" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }

bumpalo.workspace = true
const_format.workspace = true
inkwell.workspace = true
libloading.workspace = true
rustyline-derive.workspace = true
rustyline.workspace = true
target-lexicon.workspace = true
unicode-segmentation.workspace = true

[lib]
name = "broc_repl_cli"
path = "src/lib.rs"
