[package]
name = "broc_repl_eval"
description = "Provides the functionality for the REPL to evaluate Broc expressions."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_builtins = { path = "../compiler/builtins" }
broc_can = { path = "../compiler/can" }
broc_collections = { path = "../compiler/collections" }
broc_fmt = { path = "../compiler/fmt" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_mono = { path = "../compiler/mono" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_problem = { path = "../compiler/problem" }
broc_region = { path = "../compiler/region" }
broc_reporting = { path = "../reporting" }
broc_std = { path = "../broc_std" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }

bumpalo.workspace = true
