[package]
name = "broc_repl_expect"
description = "Supports evaluating expect and printing contextual information when they fail."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_build = { path = "../compiler/build" }
broc_builtins = { path = "../compiler/builtins" }
broc_can = { path = "../compiler/can" }
broc_collections = { path = "../compiler/collections" }
broc_error_macros = { path = "../error_macros" }
broc_gen_llvm = { path = "../compiler/gen_llvm" }
broc_load = { path = "../compiler/load" }
broc_module = { path = "../compiler/module" }
broc_mono = { path = "../compiler/mono" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_region = { path = "../compiler/region" }
broc_repl_eval = { path = "../repl_eval" }
broc_reporting = { path = "../reporting" }
broc_std = { path = "../broc_std" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }

bumpalo.workspace = true
inkwell.workspace = true
libc.workspace = true
libloading.workspace = true
signal-hook.workspace = true
target-lexicon.workspace = true

[dev-dependencies]
broc_build = { path = "../compiler/build", features = ["target-aarch64", "target-x86_64"] }

indoc.workspace = true
pretty_assertions.workspace = true
strip-ansi-escapes.workspace = true
tempfile.workspace = true


[lib]
name = "broc_repl_expect"
path = "src/lib.rs"
