[package]
name = "broc_repl_wasm"
description = "Provides a build of the REPL for the Broc website using WebAssembly."

authors = ["The Broc Contributors"]
edition = "2021"
license = "UPL-1.0"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
broc_bitcode = { path = "../compiler/builtins/bitcode" }
broc_builtins = { path = "../compiler/builtins" }
wasi_libc_sys = { path = "../wasi-libc-sys" }

tempfile.workspace = true

[dependencies]
bumpalo.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
getrandom = { version = "0.2", features = ["js"] } # not a direct dependency, needed because of https://docs.rs/getrandom/latest/getrandom/#webassembly-support
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true

broc_collections = { path = "../compiler/collections" }
broc_gen_wasm = { path = "../compiler/gen_wasm" }
broc_load = { path = "../compiler/load" }
broc_parse = { path = "../compiler/parse" }
broc_repl_eval = { path = "../repl_eval" }
broc_reporting = { path = "../reporting" }
broc_target = { path = "../compiler/broc_target" }
broc_types = { path = "../compiler/types" }

[features]
wasi_test = ["futures"]

# Tell wasm-pack not to run wasm-opt automatically. We run it explicitly when we need to.
# (Workaround for a CI install issue with wasm-pack https://github.com/rustwasm/wasm-pack/issues/864)
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
