[package]
name = "broc_reporting"
description = "Responsible for generating warning and error messages."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_can = { path = "../compiler/can" }
broc_collections = { path = "../compiler/collections" }
broc_error_macros = { path = "../error_macros" }
broc_exhaustive = { path = "../compiler/exhaustive" }
broc_fmt = { path = "../compiler/fmt" }
broc_module = { path = "../compiler/module" }
broc_parse = { path = "../compiler/parse" }
broc_problem = { path = "../compiler/problem" }
broc_region = { path = "../compiler/region" }
broc_solve_problem = { path = "../compiler/solve_problem" }
broc_std = { path = "../broc_std" }
broc_types = { path = "../compiler/types" }
ven_pretty = { path = "../vendor/pretty" }
itertools = "0.10.5"

bumpalo.workspace = true
distance.workspace = true

[dev-dependencies]
broc_builtins = { path = "../compiler/builtins" }
broc_constrain = { path = "../compiler/constrain" }
broc_derive = { path = "../compiler/derive" }
broc_load = { path = "../compiler/load" }
broc_packaging = { path = "../packaging" }
broc_parse = { path = "../compiler/parse" }
broc_problem = { path = "../compiler/problem" }
broc_solve = { path = "../compiler/solve" }
broc_target = { path = "../compiler/broc_target" }
broc_test_utils = { path = "../test_utils" }

indoc.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
