[package]
name = "valgrind"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dev-dependencies]
cli_utils = { path = "../cli_utils" }
broc_command_utils = { path = "../utils/command" }
broc_build = { path = "../compiler/build" }
broc_linker = { path = "../linker" }
broc_load = { path = "../compiler/load" }
broc_mono = { path = "../compiler/mono" }
broc_packaging = { path = "../packaging" }
broc_reporting = { path = "../reporting" }

bumpalo.workspace = true
indoc.workspace = true
target-lexicon.workspace = true
tempfile.workspace = true

[features]
default = ["target-aarch64", "target-x86_64", "target-wasm32"]

target-aarch64 = ["broc_build/target-aarch64"]
target-arm = []
target-wasm32 = []
target-x86 = []
target-x86_64 = ["broc_build/target-x86_64"]

[package.metadata.cargo-udeps.ignore]
development = ["broc_build", "broc_linker"]
