[package]
name = "broc_wasm_interp"
description = "A WebAssembly interpreter for testing the compiler."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "broc_wasm_interp"
path = "src/main.rs"

[dependencies]
broc_wasm_module = { path = "../wasm_module" }

bitvec.workspace = true
bumpalo.workspace = true
clap.workspace = true
rand.workspace = true
