[package]
name = "broc_alias_analysis"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
morphic_lib = { path = "../../vendor/morphic_lib" }
broc_collections = { path = "../collections" }
broc_debug_flags = { path = "../debug_flags" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_mono = { path = "../mono" }

bumpalo.workspace = true
