[package]
name = "broc_builtins"
description = "Provides the Broc functions and modules that are implicitly imported into every module."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../collections" }
broc_module = { path = "../module" }
broc_region = { path = "../region" }
broc_target = { path = "../broc_target" }

tempfile.workspace = true

