[package]
name = "broc_can"
description = "Canonicalize a broc abstract syntax tree, resolving symbols, re-ordering definitions, and preparing a module for type inference."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_exhaustive = { path = "../exhaustive" }
broc_module = { path = "../module" }
broc_parse = { path = "../parse" }
broc_problem = { path = "../problem" }
broc_region = { path = "../region" }
broc_serialize = { path = "../serialize" }
broc_types = { path = "../types" }

ven_pretty = { path = "../../vendor/pretty" }

bitvec.workspace = true
bumpalo.workspace = true
static_assertions.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
