[package]
name = "broc_constrain"
description = "Responsible for building the set of constraints that are used during type inference of a program, and for gathering context needed for pleasant error messages when a type error occurs."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_can = { path = "../can" }
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_parse = { path = "../parse" }
broc_problem = { path = "../problem" }
broc_region = { path = "../region" }
broc_types = { path = "../types" }

arrayvec.workspace = true
