[package]
name = "broc_derive"
description = "Provides auto-derivers for builtin abilities like `Hash` and `Decode`."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_can = { path = "../can" }
broc_collections = { path = "../collections" }
broc_derive_key = { path = "../derive_key" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_region = { path = "../region" }
broc_types = { path = "../types" }
broc_unify = { path = "../unify" }

bumpalo.workspace = true

[features]
debug-derived-symbols = ["broc_module/debug-symbols"]
default = []
# Enables open extension variables for constructed records and tag unions.
# This is not necessary for code generation, but may be necessary if you are
# constraining and solving generated derived bodies.
open-extension-vars = []
