[package]
name = "broc_derive_key"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_region = { path = "../region" }
broc_types = { path = "../types" }
