[package]
name = "broc_exhaustive"
description = "Provides exhaustiveness checking for Broc."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_problem = { path = "../problem" }
broc_region = { path = "../region" }
