[package]
name = "broc_fmt"
description = "The broc code formatter."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_collections = { path = "../collections" }
broc_module = { path = "../module" }
broc_parse = { path = "../parse" }
broc_region = { path = "../region" }

bumpalo.workspace = true
