[package]
name = "broc_gen_dev"
description = "The development backend for the Broc compiler"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_builtins = { path = "../builtins" }
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_mono = { path = "../mono" }
broc_problem = { path = "../problem" }
broc_region = { path = "../region" }
broc_solve = { path = "../solve" }
broc_target = { path = "../broc_target" }
broc_types = { path = "../types" }
broc_unify = { path = "../unify" }

bumpalo.workspace = true
object.workspace = true
packed_struct.workspace = true
target-lexicon.workspace = true

[dev-dependencies]
broc_can = { path = "../can" }
broc_parse = { path = "../parse" }
broc_std = { path = "../../broc_std" }

bumpalo.workspace = true
capstone.workspace = true

[features]
target-aarch64 = []
target-x86_64 = []
