[package]
name = "broc_gen_llvm"
description = "The LLVM backend for the Broc compiler"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
morphic_lib = { path = "../../vendor/morphic_lib" }
broc_alias_analysis = { path = "../alias_analysis" }
broc_bitcode_bc = { path = "../builtins/bitcode/bc" }
broc_builtins = { path = "../builtins" }
broc_collections = { path = "../collections" }
broc_debug_flags = { path = "../debug_flags" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_mono = { path = "../mono" }
broc_region = { path = "../region" }
broc_std = { path = "../../broc_std" }
broc_target = { path = "../broc_target" }

bumpalo.workspace = true
inkwell.workspace = true
target-lexicon.workspace = true
