[package]
name = "broc_gen_wasm"
description = "Provides the WASM backend to generate Broc binaries."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_builtins = { path = "../builtins" }
broc_collections = { path = "../collections" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_mono = { path = "../mono" }
broc_std = { path = "../../broc_std" }
broc_target = { path = "../broc_target" }
broc_wasm_module = { path = "../../wasm_module" }

bitvec.workspace = true
bumpalo.workspace = true
