[package]
name = "broc_late_solve"
description = "Provides type unification and solving primitives from the perspective of the compiler backend."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
broc_can = { path = "../can" }
broc_collections = { path = "../collections" }
broc_derive = { path = "../derive" }
broc_error_macros = { path = "../../error_macros" }
broc_module = { path = "../module" }
broc_solve = { path = "../solve" }
broc_types = { path = "../types" }
broc_unify = { path = "../unify" }

bumpalo.workspace = true
